# Elegy

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE_TRADEOFFS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  Elegy.sln  FLIGHT_RECORDER.md  FLIGHT_RECORDER_PROTOCOL.md  PACKAGE_README.md  README.md  SECURITY.md  SESSION_TRACKING.md  UserslolziAppDataLocalTempelegy-format-testplanning.db  deny.toml  elegy.toml  justfile  package.json  rust-toolchain.toml
hosts/cli/: Cargo.toml  DISTRIBUTION.md
hosts/cli/src/: main.rs
hosts/cli/tests/: authoring.rs  mermaid.rs  skills.rs
hosts/host-mcp/: Cargo.toml  DISTRIBUTION.md
hosts/host-mcp/src/: error.rs  host.rs  lib.rs  main.rs
plugins/codegraph/: AGENTS.md  Cargo.toml  DISTRIBUTION.md
plugins/codegraph/fixtures/: elegy-codegraph.graph.v0.example.json
plugins/codegraph/src/: error.rs  ir.rs  lib.rs  main.rs  query.rs  store.rs
plugins/codegraph/tests/: integration_tests.rs
plugins/configuration/: Cargo.toml  DISTRIBUTION.md
plugins/configuration/fixtures/: elegy-configuration-receipt-v1.minimal.json  elegy-configuration-template-v1.minimal.json
plugins/configuration/schemas/: elegy-configuration-receipt-v1.schema.json  elegy-configuration-template-v1.schema.json
plugins/configuration/src/: lib.rs  main.rs
plugins/configuration/tests/: cli.rs  conformance.rs
plugins/data/: Cargo.toml
plugins/data/src/: lib.rs
plugins/desktop/: AGENTS.md  Cargo.toml  DISTRIBUTION.md
plugins/desktop/.elegy-plugin/: plugin.json
plugins/desktop/src/: lib.rs  main.rs
plugins/documentation/: Cargo.toml  DISTRIBUTION.md
plugins/documentation/.elegy-plugin/: plugin.json
plugins/documentation/src/: lib.rs  main.rs
plugins/mcp/: AGENTS.md  Cargo.toml  DISTRIBUTION.md
plugins/mcp/.elegy-plugin/: plugin.json
plugins/mcp/fixtures/: mcp-analysis-result.parity.json  mcp-server-descriptor.parity.json
plugins/mcp/src/: lib.rs  main.rs
plugins/mcp/tests/: cli.rs  conformance.rs  machine_posture.rs  parity.rs
plugins/memory/: AGENTS.md  Cargo.toml  DISTRIBUTION.md
plugins/memory-mcp/: AGENTS.md  Cargo.toml  DISTRIBUTION.md  README.md
plugins/memory-mcp/docs/: AUTH.md  CONFIG.md  DEPLOYMENT.md  PENDING.md  TRANSPORT.md  claude-desktop-config.example.json  holon-mcp-config.example.json
plugins/memory-mcp/src/: config.rs  lib.rs  main.rs  memory_tools.rs  oauth.rs  server.rs  stdio_main.rs  tests.rs
plugins/memory-mcp/tests/: phase4_regressions.rs  stdio_bootstrap.rs  wu13_repro.rs
plugins/memory/.elegy-plugin/: plugin.json
plugins/memory/fixtures/: summary-only-session-context-envelope.minimal.json
plugins/memory/schemas/: summary-only-session-context-envelope.schema.json
plugins/memory/src/: cli.rs  consolidator.rs  decay.rs  error.rs  gate.rs  lib.rs  local_store.rs  main.rs  promotion.rs  similarity.rs  traits.rs  types.rs
plugins/memory/tests/: cli.rs  conformance.rs  governed_memory.rs  integration.rs  local_store.rs
plugins/notify/: Cargo.toml
plugins/observe/: AGENTS.md  Cargo.toml  DISTRIBUTION.md
plugins/observe/.elegy-plugin/: plugin.json
plugins/observe/docs/: cli.md
plugins/observe/fixtures/: observation-event.minimal.json  observation-session.minimal.json  observation-summary.minimal.json
plugins/observe/schemas/: observation-session.schema.json
plugins/observe/src/: lib.rs  main.rs
plugins/planning/: AGENTS.md  Cargo.toml  DISTRIBUTION.md  README.md  capability-catalog.json
plugins/planning/.elegy-plugin/: plugin.json
plugins/planning/schemas/: orchestrator-dispatch.schema.json  orchestrator-worker-result.schema.json  planning-manifest.schema.json  planning-result.schema.json
plugins/planning/src/: cli.rs  envelope.rs  error.rs  intent.rs  lib.rs  main.rs  manifest.rs  model.rs  service.rs  session.rs  storage.rs  template.rs  validation.rs  workflow.rs
plugins/planning/templates/: implementation-slice.yaml  migration.yaml  phase-gate.yaml  production-readiness.yaml  research-decision.yaml  roadmap-workflow.yaml
plugins/planning/tests/: integration.rs  machine_posture.rs  marketplace_conformance.rs
plugins/repo/: Cargo.toml
plugins/skills/: AGENTS.md  Cargo.toml  DISTRIBUTION.md
plugins/skills/.elegy-plugin/: plugin.json
plugins/skills/src/: lib.rs  main.rs
plugins/skills/tests/: cli.rs  conformance.rs  machine_posture.rs
rust/: AGENTS.md  Cargo.toml  README.md  deny.toml
rust/.cargo/: config.toml
rust/.git-hooks/: pre-push
rust/artifacts-test/: agent-capability-profile.schema.json  agent-discovery.schema.json  agent-event-envelope.schema.json  agent-manifest.schema.json  agent-response-envelope.schema.json  canonical-workflow-graph.schema.json  capability-definition.schema.json  compatibility-manifest.json  compatibility-matrix.json  elegy-configuration-template-v1.schema.json  elegy-documentation-v2.schema.json  elegy-plugin-package.schema.json  execution-event.schema.json  governed-memory-record-projection.schema.json  governed-memory-record.schema.json  mcp-analysis-result.schema.json  memory-add-input.schema.json  memory-contradictions-result.schema.json  memory-export-result.schema.json  memory-health-report.schema.json  memory-list-result.schema.json  memory-purge-report.schema.json  memory-search-result.schema.json  observation-event.schema.json  observation-summary.schema.json  repo-diff-summary.schema.json  repo-status.schema.json  skill-generation-result.schema.json  skill.schema.json  structured-failure.schema.json  summary-only-session-context-envelope.schema.json  tool-projection.schema.json  web-result.schema.json
rust/artifacts-test/fixtures/: execution-event.minimal.json  (+22 more)
rust/contracts/: elegy-rust-support.json
rust/examples/: README.md
shared/adapter-fs/: Cargo.toml
shared/adapter-http/: Cargo.toml
shared/agent-events/: Cargo.toml
shared/core/: Cargo.toml
shared/desktop-win32/: AGENTS.md  Cargo.toml
shared/observe-win32/: AGENTS.md  Cargo.toml
shared/plugin-sdk/: Cargo.toml
shared/runtime/: Cargo.toml
shared/tooling/: AGENTS.md  Cargo.toml
(+1158 files in other folders)
