[workspace]
members = [
    "crates/elegy-agent-events",
    "crates/elegy-mermaid",
    "crates/elegy-contracts",
    "crates/elegy-documentation",
    "crates/elegy-memory",
    "crates/elegy-memory-mcp",
    "crates/elegy-planning",
    "crates/elegy-policy",
    "crates/elegy-mcp",
    "crates/elegy-skills",
    "crates/elegy-tooling",
    "crates/elegy-descriptor",
    "crates/elegy-configuration",
    "crates/elegy-codegraph",
    "crates/elegy-adapter-fs",
    "crates/elegy-adapter-http",
    "crates/elegy-runtime",
    "crates/elegy-core",
    "crates/elegy-host-mcp",
    "crates/elegy-cli",
    "crates/elegy-diagram",
    "crates/elegy-observe-win32",
    "crates/elegy-observe",
    "crates/elegy-desktop-win32",
    "crates/elegy-desktop",
    "crates/elegy-repo",
    "crates/elegy-web",
    "crates/elegy-data",
    "crates/elegy-notify",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Elegy Contributors"]
repository = "https://github.com/sfrsh/Elegy"
homepage = "https://github.com/sfrsh/Elegy"
documentation = "https://github.com/Sofreshx/Elegy/blob/main/README.md"
readme = "../README.md"

[workspace.dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.5.30", features = ["derive"] }
glob = "0.3.2"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
rmcp = { version = "1.2.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "time", "process"] }
toml = "0.8.20"
url = { version = "2.5.4", features = ["serde"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
arboard = "3.4"
png = "0.17"
sysinfo = "0.33"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
