[package]
name = "elegy-cli"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "elegy"
path = "src/main.rs"

[dependencies]
clap.workspace = true
elegy-configuration = { version = "0.1.0", path = "../../plugins/configuration" }
elegy-core = { version = "0.1.0", path = "../../shared/core" }
elegy-desktop = { version = "0.1.0", path = "../../plugins/desktop" }
elegy-data = { version = "0.1.0", path = "../../plugins/data" }
elegy-host-mcp = { version = "0.1.0", path = "../host-mcp" }
elegy-mermaid = { version = "0.1.0", path = "../../plugins/mermaid" }
elegy-diagram = { version = "0.1.0", path = "../../plugins/diagram" }
elegy-mcp = { version = "0.1.0", path = "../../plugins/mcp" }
elegy-memory = { version = "0.1.0", path = "../../plugins/memory" }
elegy-notify = { version = "0.1.0", path = "../../plugins/notify" }
elegy-observe = { version = "0.1.0", path = "../../plugins/observe" }
elegy-repo = { version = "0.1.0", path = "../../plugins/repo" }
elegy-skills = { version = "0.1.0", path = "../../plugins/skills" }
elegy-tooling = { version = "0.1.0", path = "../../shared/tooling" }
elegy-web = { version = "0.1.0", path = "../../plugins/web" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
