[package]
name = "elegy-host-mcp"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
elegy-core = { version = "0.1.0", path = "../../shared/core" }
elegy-skills = { version = "0.1.0", path = "../../plugins/skills" }
rmcp.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
rmcp = { workspace = true, features = ["client", "server", "transport-io"] }
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true

[[bin]]
name = "elegy-run"
path = "src/main.rs"

[lints]
workspace = true
