[package]
name = "elegy-codegraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Portable codebase graph extraction and query CLI for TypeScript and Rust"
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"
redb = "4.1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
walkdir = "2.5"
pathdiff = "0.2"
scip = "0.8.1"
protobuf = "3.7.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
