[package]
name = "elegy-data"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
csv = "1.3.1"
jsonschema = "0.17.1"

[lints]
workspace = true
