[package]
name = "elegy-documentation"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "elegy-documentation"
path = "src/main.rs"

[dependencies]
clap.workspace = true
elegy-core = { version = "0.1.0", path = "../../shared/core" }
elegy-tooling = { version = "0.1.0", path = "../../shared/tooling" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["parsing"] }

[lints]
workspace = true
