[package]
name = "elegy-mcp"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "elegy-mcp"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
elegy-core = { version = "0.1.0", path = "../../shared/core" }

[lints]
workspace = true
