[package]
name = "elegy-memory-mcp"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
autobins = false

[[bin]]
name = "elegy-memory-mcp-http"
path = "src/main.rs"

[[bin]]
name = "elegy-memory-mcp-stdio"
path = "src/stdio_main.rs"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
directories = "5.0.1"
elegy-memory = { version = "0.1.0", path = "../memory" }
jsonwebtoken = "9.3.1"
rand = "0.8.5"
rmcp = { workspace = true, features = ["macros"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["net", "process"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
url.workspace = true
uuid = { version = "1.15.1", features = ["serde", "v4"] }
base64.workspace = true

[dev-dependencies]
async-trait.workspace = true
rmcp = { workspace = true, features = ["client", "server", "transport-child-process", "transport-io"] }
tempfile = "3.19.1"

[lints]
workspace = true
