[package]
name = "elegy-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "elegy-memory"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
chrono = { version = "0.4.44", features = ["serde"] }
elegy-contracts = { version = "0.1.0", path = "../../shared/contracts" }
reqwest = { workspace = true, features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
time = { workspace = true, features = ["parsing", "serde"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.16.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
[lints]
workspace = true
