[package]
name = "elegy-notify"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Notification helpers for Windows toast delivery and outbound webhooks."

[dependencies]
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
