[package]
name = "elegy-observe"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
description = "Desktop and OS observation for agentic workflows. Process snapshots, window tracking, clipboard, screen capture, and filesystem diffing."

[dependencies]
elegy-core = { version = "0.1.0", path = "../../shared/core" }
base64.workspace = true
clap.workspace = true
png.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
sysinfo.workspace = true
arboard.workspace = true

[target.'cfg(windows)'.dependencies]
elegy-observe-win32 = { version = "0.1.0", path = "../../shared/observe-win32" }

[[bin]]
name = "elegy-observe"
path = "src/main.rs"

[lints]
workspace = true
