[package]
name = "elegy-planning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "elegy-planning"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
schemars = "1.2.1"
serde_path_to_error = "0.1.20"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.16.0"
jsonschema = { version = "0.46.5", default-features = false }

[lints]
workspace = true
