[package]
name = "elegy-adapter-http"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
elegy-descriptor = { version = "0.1.0", path = "../descriptor" }
elegy-policy = { version = "0.1.0", path = "../policy" }
reqwest.workspace = true
url.workspace = true

[lints]
workspace = true