[package]
name = "elegy-agent-events"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
elegy-core = { version = "0.1.0", path = "../core" }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[lints]
workspace = true