[package]
name = "elegy-core"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
elegy-agent-events = { version = "0.1.0", path = "../agent-events" }
elegy-contracts = { version = "0.1.0", path = "../contracts" }
elegy-descriptor = { version = "0.1.0", path = "../descriptor" }
elegy-policy = { version = "0.1.0", path = "../policy" }
elegy-runtime = { version = "0.1.0", path = "../runtime" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
