[package]
name = "elegy-core"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
elegy-descriptor = { version = "0.1.0", path = "../descriptor" }
elegy-policy = { version = "0.1.0", path = "../policy" }
elegy-runtime = { version = "0.1.0", path = "../runtime" }
semver = "1"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
elegy-mcp = { version = "0.1.0", path = "../../plugins/mcp" }

[[bin]]
name = "elegy-contracts"
path = "src/main.rs"

[lints]
workspace = true
