[package]
name = "elegy-observe-win32"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
description = "Minimal Win32 FFI wrappers for desktop observation. Unsafe code is isolated in this leaf crate."

[dependencies]
serde.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

# Does NOT inherit workspace lints — this crate intentionally uses unsafe FFI.
# Other safety lints are replicated manually.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "deny"
todo = "deny"
dbg_macro = "deny"
