[package]
name = "elegy-plugin-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "SDK for building Elegy plugin repositories — types, validation, packaging, and export"
license = "Apache-2.0"
authors = ["Elegy Contributors"]
repository = "https://github.com/Sofreshx/Elegy"
publish = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.2.1"
semver = "1"
sha2 = "0.10"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"
