[package]
name = "elegy-tooling"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
elegy-plugin-sdk = { version = "0.1.0", path = "../plugin-sdk" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
