[package]
name = "elegy-tooling"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "elegy-plugin-packaging"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
elegy-plugin-sdk = { version = "0.1.0", path = "../plugin-sdk" }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]

[lints]
workspace = true
