[package]
name = "elegy-adapter-http"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
elegy-descriptor = { version = "0.1.0", path = "../elegy-descriptor" }
elegy-policy = { version = "0.1.0", path = "../elegy-policy" }
reqwest.workspace = true
url.workspace = true

[lints]
workspace = true
