[package]
name = "elegy-agent-events"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
elegy-contracts = { version = "0.1.0", path = "../elegy-contracts" }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[lints]
workspace = true
