[package]
name = "elegy-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
time = { workspace = true, features = ["parsing"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
url.workspace = true
zip.workspace = true
semver = "1"

[lints]
workspace = true
