[package]
name = "elegy-core"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
elegy-agent-events = { version = "0.1.0", path = "../elegy-agent-events" }
elegy-contracts = { version = "0.1.0", path = "../elegy-contracts" }
elegy-descriptor = { version = "0.1.0", path = "../elegy-descriptor" }
elegy-policy = { version = "0.1.0", path = "../elegy-policy" }
elegy-runtime = { version = "0.1.0", path = "../elegy-runtime" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
